--- a/app/stylesheets/forumby/_forumby.sass
+++ b/app/stylesheets/forumby/_forumby.sass
@@ -1,21 +1,15 @@
+// Forumby
+
 $forumby-margin: 16px
 $forumby-padding: 16px
-$forumby-text-color: $font-color
 $forumby-background-color: white
-$forumby-header-margin: 0px
-$forumby-header-color: $header-color
+
+// -- //
 
 #forumby
   +block
 
-  margin: 16px
-  padding: 16px
-
-  color: $forumby-text-color
+  margin: $forumby-margin
+  padding: $forumby-padding
 
   background-color: $forumby-background-color
-
-  h1, h2, h3, h4, h5, h6
-    margin: $forumby-header-margin
-
-    color: $forumby-header-color
