--- a/app/stylesheets/partials/_colors.sass
+++ b/app/stylesheets/partials/_colors.sass
@@ -1,4 +1,1 @@
-$forumby-grey: #edeceb
-$forumby-dark-grey: $forumby-grey - #111
-$forumby-darker-grey: $forumby-grey - #333
-$forumby-blue: #91b7e6
+$forumby-master-color: #f1f4f7
