--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -524,14 +524,17 @@ form textarea {
   height: 250px;
 }
 
-/* line 8, ../../app/stylesheets/forumby/_header.sass */
+/* line 38, ../../app/stylesheets/forumby/_header.sass */
 header {
   display: block;
-  background-color: #80a6d5;
-  border-bottom: 1px solid #333333;
+  margin: 0px;
   padding: 8px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #333333;
+  background-color: #80a6d5;
 }
-/* line 16, ../../app/stylesheets/forumby/_header.sass */
+/* line 51, ../../app/stylesheets/forumby/_header.sass */
 header #forum-name {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
@@ -539,21 +542,23 @@ header #forum-name {
   vertical-align: middle;
   *vertical-align: auto;
   margin: 24px 0px;
+  padding: 0px;
   font-size: 6em;
+  font-weight: normal;
   color: white;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
 header #forum-name {
   *display: inline;
 }
-/* line 24, ../../app/stylesheets/forumby/_header.sass */
+/* line 61, ../../app/stylesheets/forumby/_header.sass */
 header #member-panel {
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -o-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -khtml-border-radius: 8px;
-  border-radius: 8px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
@@ -561,139 +566,142 @@ header #member-panel {
   *vertical-align: auto;
   display: inline;
   float: right;
-  background-color: #a2c8f7;
   margin: 8px;
   padding: 8px;
+  background-color: #a6c1e2;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
 header #member-panel {
   *display: inline;
 }
-/* line 34, ../../app/stylesheets/forumby/_header.sass */
-header #member-panel p {
+/* line 70, ../../app/stylesheets/forumby/_header.sass */
+header #member-panel .member-name {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
   margin: 0px;
+  padding: 8px;
   font-size: 2em;
+  font-weight: normal;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
-header #member-panel p {
+header #member-panel .member-name {
   *display: inline;
 }
-/* line 41, ../../app/stylesheets/forumby/_header.sass */
+/* line 79, ../../app/stylesheets/forumby/_header.sass */
 header #member-panel .links {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-  border-left: 1px solid #6f95c4;
-  margin-left: 4px;
-  padding-left: 4px;
+  margin: 0px;
+  padding: 8px;
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-left-color: #80a6d5;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
 header #member-panel .links {
   *display: inline;
 }
-/* line 48, ../../app/stylesheets/forumby/_header.sass */
+/* line 90, ../../app/stylesheets/forumby/_header.sass */
 header #member-panel .links a {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-  padding: 4px;
+  margin: 0px;
+  padding: 8px;
   font-size: 1.4em;
+  font-weight: normal;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
 header #member-panel .links a {
   *display: inline;
 }
 
-/* line 8, ../../app/stylesheets/forumby/_forumby.sass */
+/* line 9, ../../app/stylesheets/forumby/_forumby.sass */
 #forumby {
   display: block;
   margin: 16px;
   padding: 16px;
-  color: #333333;
   background-color: white;
 }
-/* line 18, ../../app/stylesheets/forumby/_forumby.sass */
-#forumby h1, #forumby h2, #forumby h3, #forumby h4, #forumby h5, #forumby h6 {
-  margin: 0px;
-  color: #222222;
-}
 
-/* line 17, ../../app/stylesheets/forumby/_member.sass */
+/* line 30, ../../app/stylesheets/forumby/_member.sass */
 .member {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -webkit-border-top-left-radius: 5px;
+  -o-border-top-left-radius: 5px;
+  -ms-border-top-left-radius: 5px;
+  -khtml-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -o-border-top-right-radius: 5px;
+  -ms-border-top-right-radius: 5px;
+  -khtml-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
   display: block;
   margin: 8px;
+  padding: 0px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #e1e7ee;
+  background-color: #f1f4f7;
+}
+/* line 43, ../../app/stylesheets/forumby/_member.sass */
+.member .name {
+  display: block;
+  margin: 0px;
   padding: 8px;
-  background-color: #edeceb;
-}
-/* line 25, ../../app/stylesheets/forumby/_member.sass */
-.member .member-portrait {
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-}
-/* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
-.member .member-portrait {
-  *display: inline;
-}
-/* line 28, ../../app/stylesheets/forumby/_member.sass */
-.member .member-portrait .name {
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
   font-size: 2em;
+  font-weight: normal;
 }
-/* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
-.member .member-portrait .name {
-  *display: inline;
-}
-/* line 33, ../../app/stylesheets/forumby/_member.sass */
+/* line 52, ../../app/stylesheets/forumby/_member.sass */
 .member .member-information {
+  display: block;
+  margin: 0px;
+  padding: 8px;
+}
+/* line 58, ../../app/stylesheets/forumby/_member.sass */
+.member .member-information .topic-count {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-  margin: 8px;
-  padding: 8px;
-  border-left-width: 1px;
-  border-left-style: solid;
-  border-left-color: #c9c6c3;
+  margin: 0px;
+  padding: 0px 8px;
+  font-size: 1.4em;
+  font-weight: normal;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
-.member .member-information {
+.member .member-information .topic-count {
   *display: inline;
 }
-/* line 44, ../../app/stylesheets/forumby/_member.sass */
-.member .member-information .topic-count {
-  display: block;
-  font-size: 1.4em;
-}
-/* line 49, ../../app/stylesheets/forumby/_member.sass */
+/* line 67, ../../app/stylesheets/forumby/_member.sass */
 .member .member-information .post-count {
-  display: block;
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  margin: 0px;
+  padding: 0px 8px;
   font-size: 1.4em;
+  font-weight: normal;
+}
+/* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+.member .member-information .post-count {
+  *display: inline;
 }
 
-/* line 26, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 34, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum {
   -moz-border-radius-topleft: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -709,53 +717,59 @@ header #member-panel .links a {
   border-top-right-radius: 5px;
   display: block;
   margin: 8px;
-  padding: 8px;
-  background-color: #e4edf9;
+  padding: 0px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #d1dbe4;
+  background-color: #e1e7ee;
 }
-/* line 34, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 47, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .name {
   display: block;
   margin: 0px;
-  padding: 0px;
+  padding: 8px;
   font-size: 2em;
+  font-weight: normal;
 }
-/* line 42, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 56, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .description {
   display: block;
-  margin: 0px 0px 4px 0px;
-  padding: 0px;
-  color: #4d4d4d;
+  margin: 0px;
+  padding: 0px 8px 8px 8px;
+  color: #333333;
   font-size: 1em;
+  font-weight: normal;
 }
-/* line 52, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 67, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .nested-forums {
   display: block;
   margin: 0px;
-  padding: 8px;
+  padding: 0px 16px;
 }
-/* line 58, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 73, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .nested_forum {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-  margin: 0px 4px;
-  padding: 0px;
+  margin: 0px;
+  padding: 8px;
 }
 /* line 7, ../../../../../../usr/local/rvm/gems/ruby-1.9.2-p180@forumby/gems/compass-0.11.2/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
 .top_level_forum .nested_forum {
   *display: inline;
 }
-/* line 64, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 79, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .nested_forum .name {
   display: block;
   margin: 0px;
   padding: 0px;
   font-size: 1.2em;
+  font-weight: normal;
 }
 
-/* line 42, ../../app/stylesheets/forumby/_category.sass */
+/* line 49, ../../app/stylesheets/forumby/_category.sass */
 .category {
   -moz-border-radius-topleft: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -772,57 +786,59 @@ header #member-panel .links a {
   display: block;
   margin: 8px;
   padding: 0px;
-  background-color: #edeceb;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #e1e7ee;
+  background-color: #f1f4f7;
 }
-/* line 50, ../../app/stylesheets/forumby/_category.sass */
+/* line 62, ../../app/stylesheets/forumby/_category.sass */
 .category .name {
   display: block;
   margin: 0px;
   padding: 8px;
   font-size: 2em;
+  font-weight: normal;
 }
-/* line 58, ../../app/stylesheets/forumby/_category.sass */
+/* line 71, ../../app/stylesheets/forumby/_category.sass */
 .category .forums {
   display: block;
   margin: 0px;
   padding: 0px;
 }
-/* line 64, ../../app/stylesheets/forumby/_category.sass */
-.category .category_forum:first-child {
-  border: none;
-}
-/* line 67, ../../app/stylesheets/forumby/_category.sass */
+/* line 77, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum {
   display: block;
   margin: 0px;
   padding: 8px;
-  border-top-width: 2px;
+  border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: white;
-  background-color: #f1f6fc;
+  border-top-color: #d1dbe4;
+  background-color: #e1e7ee;
 }
-/* line 80, ../../app/stylesheets/forumby/_category.sass */
+/* line 90, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .name {
   display: block;
   margin: 0px;
   padding: 0px;
-  font-size: 1.5em;
+  font-size: 1.4em;
+  font-weight: normal;
 }
-/* line 88, ../../app/stylesheets/forumby/_category.sass */
+/* line 99, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .description {
   display: block;
-  margin: 0px 0px 4px 0px;
+  margin: 0px;
   padding: 0px;
-  color: #4d4d4d;
+  color: #333333;
   font-size: 1em;
+  font-weight: normal;
 }
-/* line 98, ../../app/stylesheets/forumby/_category.sass */
+/* line 110, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .nested-forums {
   display: block;
   margin: 0px;
   padding: 8px;
 }
-/* line 104, ../../app/stylesheets/forumby/_category.sass */
+/* line 116, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .nested_forum {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
@@ -836,15 +852,16 @@ header #member-panel .links a {
 .category .category_forum .nested_forum {
   *display: inline;
 }
-/* line 110, ../../app/stylesheets/forumby/_category.sass */
+/* line 122, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .nested_forum .name {
   display: block;
   margin: 0px;
   padding: 0px;
   font-size: 1.2em;
+  font-weight: normal;
 }
 
-/* line 35, ../../app/stylesheets/forumby/_forum.sass */
+/* line 43, ../../app/stylesheets/forumby/_forum.sass */
 .forum {
   -moz-border-radius-topleft: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -861,22 +878,26 @@ header #member-panel .links a {
   display: block;
   margin: 8px;
   padding: 0px;
-  background-color: #e4edf9;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #e1e7ee;
+  background-color: #f1f4f7;
 }
-/* line 43, ../../app/stylesheets/forumby/_forum.sass */
+/* line 56, ../../app/stylesheets/forumby/_forum.sass */
 .forum .name {
   display: block;
   margin: 0px;
-  padding: 8px 8px 4px 8px;
+  padding: 8px;
   font-size: 2em;
+  font-weight: normal;
 }
-/* line 51, ../../app/stylesheets/forumby/_forum.sass */
+/* line 65, ../../app/stylesheets/forumby/_forum.sass */
 .forum .nested-forums {
   display: block;
   margin: 0px;
   padding: 0px 16px;
 }
-/* line 57, ../../app/stylesheets/forumby/_forum.sass */
+/* line 71, ../../app/stylesheets/forumby/_forum.sass */
 .forum .nested_forum {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
@@ -890,42 +911,44 @@ header #member-panel .links a {
 .forum .nested_forum {
   *display: inline;
 }
-/* line 63, ../../app/stylesheets/forumby/_forum.sass */
+/* line 77, ../../app/stylesheets/forumby/_forum.sass */
 .forum .nested_forum .name {
   display: block;
   margin: 0px;
   padding: 0px;
   font-size: 1.2em;
+  font-weight: normal;
 }
-/* line 71, ../../app/stylesheets/forumby/_forum.sass */
+/* line 86, ../../app/stylesheets/forumby/_forum.sass */
 .forum .topics {
   display: block;
   margin: 0px;
   padding: 0px;
 }
-/* line 77, ../../app/stylesheets/forumby/_forum.sass */
+/* line 92, ../../app/stylesheets/forumby/_forum.sass */
 .forum .forum_topic:first-child {
   border: none;
 }
-/* line 80, ../../app/stylesheets/forumby/_forum.sass */
+/* line 95, ../../app/stylesheets/forumby/_forum.sass */
 .forum .forum_topic {
   display: block;
   margin: 0px;
   padding: 8px;
-  border-top-width: 2px;
+  border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: white;
-  background-color: #f1f6fc;
+  border-top-color: #d1dbe4;
+  background-color: #e1e7ee;
 }
-/* line 93, ../../app/stylesheets/forumby/_forum.sass */
+/* line 108, ../../app/stylesheets/forumby/_forum.sass */
 .forum .forum_topic .title {
   display: block;
   margin: 0px;
   padding: 0px;
-  font-size: 1.5em;
+  font-size: 1.4em;
+  font-weight: normal;
 }
 
-/* line 40, ../../app/stylesheets/forumby/_topic.sass */
+/* line 37, ../../app/stylesheets/forumby/_topic.sass */
 .topic {
   -moz-border-radius-topleft: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -947,59 +970,39 @@ header #member-panel .links a {
   border-color: #e1e7ee;
   background-color: #f1f4f7;
 }
-/* line 53, ../../app/stylesheets/forumby/_topic.sass */
+/* line 50, ../../app/stylesheets/forumby/_topic.sass */
 .topic .title {
   display: block;
   margin: 0px;
   padding: 8px;
   font-size: 2em;
 }
-/* line 61, ../../app/stylesheets/forumby/_topic.sass */
+/* line 58, ../../app/stylesheets/forumby/_topic.sass */
 .topic .posts {
   display: block;
   margin: 0px;
   padding: 0px;
 }
-/* line 67, ../../app/stylesheets/forumby/_topic.sass */
+/* line 64, ../../app/stylesheets/forumby/_topic.sass */
 .topic .topic_post {
-  display: -moz-box;
-  display: -webkit-box;
-  display: box;
-  -moz-box-orient: horizontal;
-  -webkit-box-orient: horizontal;
-  box-orient: horizontal;
-  -moz-box-align: stretch;
-  -webkit-box-align: stretch;
-  box-align: stretch;
-  -moz-box-direction: normal;
-  -webkit-box-direction: normal;
-  box-direction: normal;
-  -moz-box-lines: single;
-  -webkit-box-lines: single;
-  box-lines: single;
-  -moz-box-pack: start;
-  -webkit-box-pack: start;
-  box-pack: start;
-  margin: 0px;
+  display: block;
+  margin: 8px 0px 0px 0px;
   padding: 0px;
-  width: 100%;
   border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: #e1e7ee;
+  border-top-color: #d1dbe4;
 }
-/* line 80, ../../app/stylesheets/forumby/_topic.sass */
+/* line 75, ../../app/stylesheets/forumby/_topic.sass */
 .topic .topic_post .topic_post_member {
+  display: block;
   margin: 0px;
   padding: 16px;
-  width: 10%;
-  background-color: #d1dbe4;
+  background-color: #e1e7ee;
   word-wrap: break-word;
 }
-/* line 91, ../../app/stylesheets/forumby/_topic.sass */
+/* line 85, ../../app/stylesheets/forumby/_topic.sass */
 .topic .topic_post .content {
-  -moz-box-flex: 1;
-  -webkit-box-flex: 1;
-  box-flex: 1;
+  display: block;
   margin: 0px;
   padding: 16px;
   background-color: white;
@@ -1008,7 +1011,7 @@ header #member-panel .links a {
   word-wrap: break-word;
 }
 
-/* line 22, ../../app/stylesheets/forumby/_post.sass */
+/* line 29, ../../app/stylesheets/forumby/_post.sass */
 .post {
   -moz-border-radius-topleft: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -1030,15 +1033,24 @@ header #member-panel .links a {
   border-color: #e1e7ee;
   background-color: #f1f4f7;
 }
-/* line 35, ../../app/stylesheets/forumby/_post.sass */
-.post .member {
+/* line 42, ../../app/stylesheets/forumby/_post.sass */
+.post .author {
+  display: block;
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent;
+}
+/* line 50, ../../app/stylesheets/forumby/_post.sass */
+.post .author .name {
   display: block;
   margin: 0px;
   padding: 8px;
-  background-color: #f1f4f7;
+  background-color: transparent;
+  font-size: 1.4em;
+  font-weight: normal;
   word-wrap: break-word;
 }
-/* line 45, ../../app/stylesheets/forumby/_post.sass */
+/* line 62, ../../app/stylesheets/forumby/_post.sass */
 .post .content {
   display: block;
   margin: 0px;
@@ -1049,15 +1061,19 @@ header #member-panel .links a {
   word-wrap: break-word;
 }
 
-/* line 3, ../../app/stylesheets/forumby/_footer.sass */
+/* line 15, ../../app/stylesheets/forumby/_footer.sass */
 footer {
   display: block;
-  border-top: 1px solid #333333;
-  padding-top: 24px;
+  margin: 0px;
+  padding: 24px;
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: #333333;
 }
-/* line 9, ../../app/stylesheets/forumby/_footer.sass */
-footer p {
+/* line 26, ../../app/stylesheets/forumby/_footer.sass */
+footer .copyright {
   display: block;
-  font-size: 1.2em;
+  font-size: 1.4em;
+  font-weight: normal;
   text-align: center;
 }
